# pythonlearning

./: README.md
100DaysOfCode/Day 2/Tip Calculator Project/: task.py
100DaysOfCode/Day 3/If Else/: task.py
100DaysOfCode/Day 3/Logical Operators/: task.py
100DaysOfCode/Day 3/Modulo/: task.py
100DaysOfCode/Day 3/Multiple Ifs/: task.py
100DaysOfCode/Day 3/Python Pizza/: task-info.yaml  task.py
100DaysOfCode/Day 3/Treasure Island Project/: task.py
100DaysOfCode/Day 4/Banker Roulette/: task.py
100DaysOfCode/Day 4/Lists/: task.py
100DaysOfCode/Day 4/Random Module/: task.py
100DaysOfCode/Day 4/Rock Paper Scissors/: task.py
100DaysOfCode/Day 5/For Loops/: task.py
100DaysOfCode/Day 5/For Loops with Range/: task.py
100DaysOfCode/Day 5/Highest Score/: task.py
100DaysOfCode/Day 5/Password Generator Project/: task.py
100DaysOfCode/Day 6/Functions/: task.py  turn_left.py
100DaysOfCode/myprojects/CYOA/: actions.py  adventure.py
100DaysOfCode/myprojects/ticket_multi/: ticket_order.py
Projects/combat_system/: characters.py  combat.py  health_bar.py  inventory.py  test_inventory.py  weapons.py
Projects/pygame/: draw_graphics_turtle.py  drawing_art.py  drawing_functions.py  encryption.py
Projects/pygame/dafluffypotato_platformer/: main.py  pyproject.toml
Projects/pygame/dafluffypotato_platformer/dafluffypotato_platformer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Projects/pygame/dafluffypotato_platformer/first_game/: game.py  game_example.py
Projects/pygame/dafluffypotato_platformer/first_game/scripts/: entities.py  tilemap.py  utils.py
(+5 files in other folders)
